[gd_scene load_steps=6 format=3 uid="uid://bcw3ui3cqbmu4"]

[ext_resource type="Script" path="res://UI/CheckMeter.gd" id="1_khs8r"]
[ext_resource type="Texture2D" uid="uid://b2xeckyk25dgf" path="res://Assets/UI/MeterMarker.png" id="1_kv4j1"]
[ext_resource type="Texture2D" uid="uid://crugo3cah3is5" path="res://Assets/UI/joyknob.png" id="3_wn21f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6w175"]
size = Vector2(3, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ud1j"]
size = Vector2(7, 16)

[node name="CheckMeter" type="Node2D"]
script = ExtResource("1_khs8r")

[node name="MeterSprite" type="Sprite2D" parent="."]

[node name="GreenArea" type="Area2D" parent="MeterSprite" groups=["GreenArea", "MeterArea"]]
collision_layer = 32
collision_mask = 64

[node name="YellowArea" type="Area2D" parent="MeterSprite" groups=["MeterArea", "YellowArea"]]
collision_layer = 32
collision_mask = 64

[node name="RedArea" type="Area2D" parent="MeterSprite" groups=["MeterArea", "RedArea"]]
collision_layer = 32
collision_mask = 64

[node name="Marker" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Marker"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_6w175")

[node name="MarkerSprite" type="Sprite2D" parent="Marker"]
texture = ExtResource("1_kv4j1")

[node name="MarkerStartPosition" type="Node2D" parent="."]
position = Vector2(-100, 0)

[node name="Sprite2D" type="Sprite2D" parent="MarkerStartPosition"]
texture = ExtResource("3_wn21f")

[node name="MarkerEndPosition" type="Node2D" parent="."]
position = Vector2(90, 0)

[node name="Sprite2D" type="Sprite2D" parent="MarkerEndPosition"]
texture = ExtResource("3_wn21f")

[node name="MarkerEndArea" type="Area2D" parent="MarkerEndPosition" groups=["EndArea", "MeterArea"]]
position = Vector2(-89, 0)
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarkerEndPosition/MarkerEndArea"]
position = Vector2(93.5, 0)
shape = SubResource("RectangleShape2D_0ud1j")

[connection signal="area_entered" from="Marker" to="." method="_on_marker_area_entered"]
